[package]
name = "codegen_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = { version = "3.2.3", features = ["termination"]}
once_cell = "1.9.0"
arrayvec = "0.7.2"
smoltcp = "0.8.0"
run-time = {path = "../run-time", package = "run-time"}
run-dpdk = {path = "../run-dpdk", package = "run-dpdk"}
run-packet = {path = "../run-packet", package = "run-packet"}